--- a/src/Sexy/Views/Home/Index.cshtml
+++ b/src/Sexy/Views/Home/Index.cshtml
@@ -14,8 +14,8 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link href="/css/site.css" rel="stylesheet" type="text/css" />
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="http://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet" type="text/css" />
-    <link href='http://fonts.googleapis.com/css?family=Oswald:300,400,700' rel='stylesheet' type='text/css'>
+    <link href="//fonts.googleapis.com/css?family=Oxygen" rel="stylesheet" type="text/css" />
+    <link href='//fonts.googleapis.com/css?family=Oswald:300,400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <div id="gaffa">
